Update Ridge , Lasso Regression.ipynb

--- a/Ridge , Lasso Regression.ipynb
+++ b/Ridge , Lasso Regression.ipynb
@@ -2838,7 +2838,7 @@
    "id": "7f0727ad",
    "metadata": {},
    "source": [
-    " #Its observed that August ans september has the most number of forest fires for both regions.ANd from the above plot of months ,we can understand few things\n",
+    " #Its observed that August ans september has the most number of forest fires for both regions.And from the above plot of months ,we can understand few things\n",
     "\n"
    ]
   },
@@ -2847,7 +2847,7 @@
    "id": "c0838be4",
    "metadata": {},
    "source": [
-    "#Most of the fires happend in August and very high fires happend in only 3 months -hune, july and August.\n"
+    "#Most of the fires happend in August and very high fires happend in only 3 months -june, july and August.\n"
    ]
   },
   {
